// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LazyVideo component > Snapshots > should match snapshot after intersection but before load 1`] = `
<button
  class="relative bg-gray-200 overflow-hidden"
>
  <div
    class="absolute inset-0 flex items-center justify-center bg-gray-200 transition-opacity duration-400 ease-out opacity-100"
  >
    <svg
      class="w-8 h-8 text-gray-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M7 3v18"
      />
      <path
        d="M3 7.5h4"
      />
      <path
        d="M3 12h18"
      />
      <path
        d="M3 16.5h4"
      />
      <path
        d="M17 3v18"
      />
      <path
        d="M17 7.5h4"
      />
      <path
        d="M17 16.5h4"
      />
    </svg>
  </div>
  <video
    class="w-full h-full object-cover transition-opacity duration-400 ease-out opacity-0"
    preload="metadata"
    src="/api/media/video.mp4"
  />
</button>
`;

exports[`LazyVideo component > Snapshots > should match snapshot before intersection 1`] = `
<button
  class="relative bg-gray-200 overflow-hidden"
>
  <div
    class="absolute inset-0 flex items-center justify-center bg-gray-200 transition-opacity duration-400 ease-out opacity-100"
  >
    <svg
      class="w-8 h-8 text-gray-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M7 3v18"
      />
      <path
        d="M3 7.5h4"
      />
      <path
        d="M3 12h18"
      />
      <path
        d="M3 16.5h4"
      />
      <path
        d="M17 3v18"
      />
      <path
        d="M17 7.5h4"
      />
      <path
        d="M17 16.5h4"
      />
    </svg>
  </div>
</button>
`;

exports[`LazyVideo component > Snapshots > should match snapshot when fully loaded 1`] = `
<button
  class="relative bg-gray-200 overflow-hidden"
>
  <div
    class="absolute inset-0 flex items-center justify-center bg-gray-200 transition-opacity duration-400 ease-out opacity-0"
  >
    <svg
      class="w-8 h-8 text-gray-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M7 3v18"
      />
      <path
        d="M3 7.5h4"
      />
      <path
        d="M3 12h18"
      />
      <path
        d="M3 16.5h4"
      />
      <path
        d="M17 3v18"
      />
      <path
        d="M17 7.5h4"
      />
      <path
        d="M17 16.5h4"
      />
    </svg>
  </div>
  <video
    class="w-full h-full object-cover transition-opacity duration-400 ease-out opacity-100"
    preload="metadata"
    src="/api/media/video.mp4"
  />
</button>
`;

exports[`LazyVideo component > Snapshots > should match snapshot with children overlay 1`] = `
<button
  class="relative bg-gray-200 overflow-hidden w-48 h-36"
>
  <div
    class="absolute inset-0 flex items-center justify-center bg-gray-200 transition-opacity duration-400 ease-out opacity-100"
  >
    <svg
      class="w-8 h-8 text-gray-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M7 3v18"
      />
      <path
        d="M3 7.5h4"
      />
      <path
        d="M3 12h18"
      />
      <path
        d="M3 16.5h4"
      />
      <path
        d="M17 3v18"
      />
      <path
        d="M17 7.5h4"
      />
      <path
        d="M17 16.5h4"
      />
    </svg>
  </div>
  <div
    class="absolute bottom-1 right-1 bg-black/70 text-white text-xs px-1 rounded"
  >
    01:23
  </div>
</button>
`;
